refactor: use path parameter for specifying book_id
